Process Hacker

1.3.2.5
 * FIXED:
   * Disables "Show one graph per CPU" if there is only one CPU

1.3.2.0
 * NEW:
   * Network tab - shows current network connections
   * KProcessHacker - an experimental kernel-mode driver for Process Hacker which 
     finally enables Process Hacker to display all file handles without freezing
   * Can protect and unprotect processes (Vista's DRM protection)
   * System Information menu item in the tray icon menu
   * Hide when minimized option
   * Now resolves device names into drive letters - e.g. "\Device\Harddisk1\FileName" into 
     "C:\FileName".
   * Properly verifies system components instead of just checking file permissions
   * Configurable dangerous-process-names highlighting
   * Added protection against PEB file name spoofing
   * Customizable fonts
   * Command line switch: -m to hide Process Hacker
   * Nice relative times - "2 seconds ago", "14 minutes and 33 seconds ago", etc.
   * Displays service descriptions, dependencies, and dependents
   * Offers to reset settings if they are corrupt
 * FIXED:
   * Bug #2527154 - "Process Hacker crashes on Win XP"
   * Small UI enabling/disabling fixes
   * Now the process tree and service list update instantly after 
     starting Process Hacker instead of waiting
   * Random "Generic GDI+ Error" exceptions
   * Small performance improvements
   * Now shows proper command lines of programs where they contain null characters
   * Handle filter actually works now
   * Relative RunDLL targets
   * Handle leaks with threads

1.3.1.0
 * NEW:
   * "Free" and "Decommit" actions for memory regions
   * "Description" column for processes
   * Current Directory for processes automatically updates
   * Can now display the file names of DRM-protected 
     processes (like audiodg.exe)
   * Now displays thread information under the thread list
   * Module file name info for thread start addresses 
     and stack traces
   * Highlighting for .NET processes and packed executables