@@ -3,6 +3,7 @@ Process Hacker
 1.3.2.5
  * FIXED:
    * Disables "Show one graph per CPU" if there is only one CPU
+   * Process tree weirdness for users with limited privileges
 
 1.3.2.0
  * NEW:
